--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@emotion/styled": "11.8.1",
     "@mui/icons-material": "5.6.2",
     "@mui/material": "5.6.2",
+    "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "eslint": "^7.11.0",
     "history": "^5.3.0",
     "mui": "0.0.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.33.1",
     "react-router-dom": "6.3.0",
     "react-scripts": "4.0.0"
   },
