--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.27.2",
     "eslint": "^7.11.0",
     "history": "^5.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mui": "0.0.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
